Fix for go live scrollbar.

--- a/app/components-react/shared/DualOutputToggle.m.less
+++ b/app/components-react/shared/DualOutputToggle.m.less
@@ -15,15 +15,26 @@
   }
 }
 
-.do-tooltip {
+.dual-output-toggle {
+  display: flex;
+  flex-direction: row;
   font-size: 14px;
   color: var(--title);
+  margin-bottom: 5px;
 
   :global(.ant-tooltip-placement-bottom) {
-    left: 25px !important;
+    left: 10px !important;
   }
+}
 
+.do-tooltip {
   :global(.ant-tooltip-placement-bottom .ant-tooltip-arrow) {
     left: 170px !important;
+  }
+}
+
+.so-tooltip {
+  :global(.ant-tooltip-placement-bottom .ant-tooltip-arrow) {
+    left: 158px !important;
   }
 }
